# Omniscan

./: .gitignore  Cargo.toml  LICENSE  README.md  custom_scan.xml  wordlist.txt
.github/workflows/: release.yml
src/: assets.rs  config.rs  crt_sh.rs  email_verification.rs  fuzzer.rs  interactive.rs  lib.rs  main.rs  scanner.rs  ssl_scanner.rs  target.rs  utils.rs  zone_transfer.rs
test_results/: alive.gnmap  alive.nmap  alive.xml  scripts.gnmap  scripts.nmap  scripts.xml  tcp_all.gnmap  tcp_all.nmap  tcp_all.xml  udp_top1000.gnmap  udp_top1000.nmap  udp_top1000.xml
