[package]
name = "omniscan"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full", "signal"] }
anyhow = "1.0"
ipnetwork = "0.20"
hickory-resolver = "0.24"
futures = "0.3"
indicatif = "0.18"
tempfile = "3.14"
tokio-util = "0.7"
colored = "2.0"
dialoguer = "0.12.0"
reqwest = { version = "0.12.25", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
